gave up. bottom view is still cropped by UI. will fix later.

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@
 
 html {
   height: 100svh;
-  overflow: hidden;
 }
 
 :root {
